--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,16 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/swiper.min.css">
   <link rel="stylesheet" href="assets/css/animate.min.css">
+  <link rel="stylesheet" href="assets/css/slick.css">
+  <link rel="stylesheet" href="assets/css/slicknav.css">
+
+
 
   <style>
     .slicknav_nav {
@@ -78,11 +83,6 @@
 
 <body>
   <div id="root"></div>
-
-  <!-- <div id="back-top">
-    <a title="Go to Top" href="javascript:void(0)"> <i class="fas fa-level-up-alt"></i></a>
-  </div> -->
-
 </body>
 
 </html>
